# tractian-ml-challenge

./: .gitignore  EXTRACTED_DATA_README.md  FINAL_REPORT.md  README.md  SOLUTION_SUMMARY.md  create_demo_data.py  main.py  pyproject.toml  requirements.txt
output/: .gitkeep  BALDOR_L3514T.json  BALDOR_M2513T.json  BALDOR_M3546T.json  L1408T.json  L1510T.json  L3514T.json  M2394T.json  M2513T.json  M3546T.json  M3711T.json  VM3554T.json  VM3615T.json  VM3709T.json  demo_summary.json
output/assets/: .gitkeep
output/assets/M3546T/: cad_step.step
output/assets/M3711T/: cad_dwg.dwg
src/: downloader.py  main.py  parser.py  scraper.py
tests/: test_downloader.py
